@@ -10,6 +10,7 @@ Modules/:
 ldap.ldapobject.LDAPObject:
 * Removed unused methods uncache_entry(), uncache_request(),
   url_search(), url_search_st() and url_search_s()
+* New wrapper methods for all the _ext() methods in _ldap.LDAPObject.
 
 ----------------------------------------------------------------
 Released 2.0.0pre18 2003-12-09
